<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    tools:ignore="MissingConstraints"
    tools:context=".MainActivity2">

    <TextView
            android:id="@+id/title1"
            android:layout_width="131dp"
            android:layout_height="28dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="230dp"
            android:layout_marginTop="20dp"
            android:text="@string/title1"
            android:textAppearance="@style/title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <View
            android:id="@+id/topbar"
            android:layout_width="319dp"
            android:layout_height="48dp"
            android:layout_marginRight="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="-35dp" />
        <View
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="297dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-47dp"
            android:background="@drawable/avatar"
            android:elevation="4dp"
            />
        <View
            android:id="@+id/rectangle_8"
            android:layout_width="312dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/rectangle_8"
            />
        <TextView
            android:id="@+id/some_id3"
            android:layout_width="174dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="160dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-63dp"
            android:textSize="16sp"
            android:text="@string/some_id3"
            android:textColor="@color/white"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/some_id4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="190dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/some_id4"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/some_id"
            android:layout_width="56dp"
            android:layout_height="13dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="272dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="70dp"
            android:layout_marginTop="-36dp"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/some1"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/some2"
            android:layout_width="28dp"
            android:layout_height="13dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="272dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="100dp"
            android:text="@string/some2"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:textAppearance="@style/some_id"
            android:gravity="top"/>
        <View
            android:id="@+id/rectangle4"
            android:layout_width="312dp"
            android:layout_height="72dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_8"
            />
        <TextView
            android:id="@+id/some_id43"
            android:layout_width="174dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="170dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-63dp"
            android:textSize="16sp"
            android:text="@string/some_id43"
            android:textColor="@color/white"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/some_i"
            android:layout_width="136dp"
            android:layout_height="13dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="170dp"
            android:layout_marginTop="9dp"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/some_i"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/some_2"
            android:layout_width="56dp"
            android:layout_height="13dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="272dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-36dp"
            android:layout_marginRight="70dp"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/some1"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/some23"
            android:layout_width="28dp"
            android:layout_height="13dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="272dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:text="@string/some2"
            android:textSize="11sp"
            android:layout_marginRight="100dp"
            android:textColor="@color/white"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <View
            android:id="@+id/rectangle0"
            android:layout_width="312dp"
            android:layout_height="72dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_8"
            />
        <TextView
            android:id="@+id/some_id436"
            android:layout_width="174dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="180dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-63dp"
            android:textSize="16sp"
            android:text="@string/some_id436"
            android:textColor="@color/white"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/some_i1"
            android:layout_width="200dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="190dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:text="@string/some_i1"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/some_25"
            android:layout_width="58dp"
            android:layout_height="13dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="272dp"
            android:layout_marginTop="-50dp"
            android:layout_marginRight="70dp"
            android:gravity="top"
            android:text="@string/some1"
            android:textAppearance="@style/some_id"
            android:textColor="@color/white"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/some22"
            android:layout_width="28dp"
            android:layout_height="13dp"
            android:layout_marginLeft="272dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="100dp"
            android:text="@string/some2"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:textAppearance="@style/some_id"
            android:gravity="top"
            />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="180dp"
        android:background="@color/white_green"
        android:text="@string/some_id44"
        android:textColor="@color/white" />

        <View
            android:id="@+id/rectangle_6"
            android:layout_width="288dp"
            android:layout_height="72dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/rectangle_6"
            />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="-60dp"
        android:background="@drawable/image" />
    <TextView
        android:id="@+id/list"
        android:layout_width="18dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-2dp"
        android:gravity="top"
        android:text="@string/list"
        android:textAppearance="@style/list"
        android:textColor="@color/red_100"
        android:textSize="11sp" />
    <TableRow/>
    <TableRow>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="67dp"
        android:layout_height="32dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="-44dp"
        android:layout_marginRight="146dp"
        android:background="@drawable/time" />
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="-2dp"
        android:gravity="top"
        android:text="@string/time"
        android:textAppearance="@style/list"
        android:textColor="@color/green"
        android:textSize="11sp" />
    </TableRow>
    <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="204dp"
                android:layout_marginTop="-44dp"
                android:layout_marginRight="204dp"
                android:background="@drawable/calend" />
    <TextView
        android:id="@+id/calend"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginTop="-2dp"
        android:gravity="top"
        android:text="@string/calend"
        android:textAppearance="@style/list"
        android:textColor="@color/red_100"
        android:textSize="11sp" />
    </TableRow>

    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="270dp"
            android:layout_marginRight="270dp"
            android:layout_marginTop="-44dp"
            android:background="@drawable/setting" />
    <TextView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="-2dp"
        android:gravity="top"
        android:text="@string/setting1"
        android:textAppearance="@style/list"
        android:textColor="@color/red_100"
        android:textSize="11sp" />
    <TableRow/>

    </TableLayout>
